# ChangeLog for media-libs/libdvdnav
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdnav/ChangeLog,v 1.70 2012/05/17 14:37:58 aballier Exp $

  17 May 2012; Alexis Ballier <aballier@gentoo.org> libdvdnav-4.2.0.ebuild:
  keyword ~amd64-fbsd

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> libdvdnav-4.2.0.ebuild,
  libdvdnav-9999.ebuild:
  Pull in virtual/pkgconfig for pkg.m4 and eautoreconf wrt #414391

  12 Apr 2012; Mike Frysinger <vapier@gentoo.org> libdvdnav-4.2.0.ebuild,
  +files/libdvdnav-4.2.0-pkgconfig.patch, libdvdnav-9999.ebuild:
  Use pkg-config for finding libdvdread.

  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org>
  -libdvdnav-4.1.3_p1168.ebuild:
  old

  12 Feb 2012; Raúl Porcel <armin76@gentoo.org> libdvdnav-4.2.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #398141

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org> libdvdnav-4.2.0.ebuild:
  Stable for HPPA (bug #398141).

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> libdvdnav-4.2.0.ebuild:
  ppc/ppc64/x86 stable wrt #398141

  18 Jan 2012; Markus Meier <maekke@gentoo.org> libdvdnav-4.2.0.ebuild:
  arm stable, bug #398141

  09 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libdvdnav-4.2.0.ebuild:
  Stable for AMD64, wrt bug #398141

*libdvdnav-4.2.0 (10 Oct 2011)

  10 Oct 2011; Steve Dibb <beandog@gentoo.org> libdvdnav-4.1.3_p1168.ebuild,
  -libdvdnav-4.2.0_pre1243.ebuild, +libdvdnav-4.2.0.ebuild,
  libdvdnav-9999.ebuild:
  Move 4.2.0_pre ebuild to release; Fix SRC_URI to use upstream; Update
  homepage

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -libdvdnav-0.1.10.ebuild,
  -files/libdvdnav-0.1.10-build.patch,
  -files/libdvdnav-0.1.10-dontbuild-examples.patch:
  old

*libdvdnav-4.2.0_pre1243 (10 Oct 2011)

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  +libdvdnav-4.2.0_pre1243.ebuild:
  New snapshot.

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>