@@ -1,16 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX libdvdnav-4.2.0-pkgconfig.patch 1967 RMD160 154fa8ca08b95e5433e8c99fde29727702599a0e SHA1 2b9e37d2754e80002e58f5ebfcf1135d549f3e8a SHA256 7cafbb8c9d0dc5c49ad785eb992a076d64146d90d0b4b8d231f6aa3a4d47d5df
-DIST libdvdnav-4.2.0.tar.bz2 111575 RMD160 1e957554173feae3bdf1fdd6a83c2a64a2550683 SHA1 ded45d985576169ae3630d8be7179a2323bc0f6f SHA256 8c971b08276c89ddcecd26fc44204460fd250dc57346f03476d3077188c47550
-EBUILD libdvdnav-4.2.0.ebuild 1013 RMD160 b82abd4cfb9615795245b6a0d1ad5a74431f66a0 SHA1 39212ae6a1b5d865dbfc1f091373b0bb444d01b8 SHA256 8ccd921d25d1ea823e6e94029e238e7a5cec14cbf66265ceb6cd41ca8e7a712a
-EBUILD libdvdnav-9999.ebuild 880 RMD160 4833c256f99284aa10b1af33563e3868ac4139ae SHA1 84f55514269608d1de072341e70b2a772625162c SHA256 a5498102e763e33dfc80b4cb013a19535b0aca39529d2d3eec8505535b69aff0
-MISC ChangeLog 9061 RMD160 8f39f9cd79de86555f083488fc4b22a296266c3d SHA1 3cadb108e207a4bf9b998b316176e76250a7ed87 SHA256 9f7630735bdb42da50d31bc4d8db5c27baa96ee4908082772111388cb410c49f
-MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
+AUX libdvdnav-4.2.0-pkgconfig.patch 1967 SHA256 7cafbb8c9d0dc5c49ad785eb992a076d64146d90d0b4b8d231f6aa3a4d47d5df SHA512 c2a29a9948b2a93f0cc3198227c8e0a555231e22893bf9bb987e931cbc7a89074fad9ca65c0a7c342f05304855204157b5c6da436ede8512188be1c6351a707a WHIRLPOOL f96aedf10d66309488654fbf7b7be887bec35574d5855acb03d073bb62a4a144a1f64a8bbfbece17d3e050a7d6b94262f7778be270c787e09100466701d34460
+DIST libdvdnav-4.2.0.tar.bz2 111575 SHA256 8c971b08276c89ddcecd26fc44204460fd250dc57346f03476d3077188c47550 SHA512 f9b9c52af870bc088bc8bbc7a64285dc55906dcfd11d6849d8a7b4046b083472c3e898609ec399a45059e10cffce0ef67ec2dec2ec4f0a1c904b9b6d2a85185f WHIRLPOOL d0521b33689e7d666afaccb374c02fa5be558601f3c9670b84a28774f1f1a7ec8154f2a339bb73f369213891a163fa8b1a0e918ac3a462a41f7c8cd239a10d78
+EBUILD libdvdnav-4.2.0-r1.ebuild 1442 SHA256 2fb4bcbc27c8f27ee8fd4ceb0b319ef81b264e144a34c12cfb76b36b9c9a90c4 SHA512 8bdce4f477f16d4cd32685f359e08f85d0be6657182338853b11ad58610e0ddcd31c744db179cee32ba6ee22ee4fecc01e76842b914c9e36845a396a16760a52 WHIRLPOOL 1c72357983ed30f34a8936f408fc2ec9e3b7f7dbffffc338dcce16831737cbcf560cdf6ac3eda47a082b030f5bc1583e7b101cc482af8b2bd633e7490e5cc66c
+EBUILD libdvdnav-4.2.0.ebuild 1013 SHA256 8ccd921d25d1ea823e6e94029e238e7a5cec14cbf66265ceb6cd41ca8e7a712a SHA512 1c0c7a43ad2c8b2b08e3ed9f3bfe1353823a1af6210318125e395fe684f370b1c6443c0ec0637aedc6d05259c5b1cc30bbbc5cf56d20ed90b16b75f3d156f96e WHIRLPOOL cc04395d661853dfe74f72933cb0acf0c35b8f86509639f6e8d24954da313758c15bb9a46eeb4d9540aa58814c6f9ca7facc2328b6e17edf4d734e6bf4836972
+EBUILD libdvdnav-9999.ebuild 1438 SHA256 f75ca43026443cbca4b1fbcd3495088aabdee70685ff01ed5190d023a924bd4b SHA512 4dbfd2030cb38dc714edfc73ef6e9a8dd0a0013576d8cc55c4f403fcf853e5f8f928b2757665d8c26401842cd7c1cf866cfdda35114960f24177aece07a135ce WHIRLPOOL 7197a966e7ce5689e05e95e8ab0ca9e3705d60c3bbf201ff4fe2280394164c853d5130e5016572c48a1137023d5a33b5ee964758d5d3afb0bc526e85a5ae2609
+MISC ChangeLog 9278 SHA256 66aec2502562338af67d3b63bd15c736501a534d56a69486a9baeed756dac4db SHA512 88bb55bc832d7c8630a39c3023d7dde89be37aca9148b7ee2a9ec0d4741ec5681e7248f1c8837a0354c71170b819bc5d74fc430f300f7802f09d424967c61acd WHIRLPOOL a0a4ca4770b8e1c2d5e06c2f74b4e6104b96b4c1cc3d771cea2631b3438964f9e96469221bd0070ef233bff43b340d50c7d0482627097aee2ad949fb740b8cb2
+MISC metadata.xml 225 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5 SHA512 79bf53ca11044e2cbddf8ba8c661abd2a6f7602748ef4dc1d1a3447d4f0e5a15a4d69f6e1f60e0f854465097019607a6fe7157906bc41ddfe41fb747de3ca7d6 WHIRLPOOL d257430e16390fc27365e2f58796f0f0b7c2c818f1bae76bb2a13b7971e5d33baa9d8aa33a12605653d05e0c7bd52b020aa96b737c56ac1038c32897c481a12c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEARECAAYFAk+1DUsACgkQvFcC4BYPU0qoWwCgxPN/YkLvkcAcEQFEvgqHvOpA
-bpQAnRyhqhJPJP652WBpSRg+A75TZobg
-=7+DF
+iEYEAREIAAYFAlH3tg4ACgkQvFcC4BYPU0o0xgCdHLM4Uevn+JTJSzCcwcSIuNbH
+F7oAn0RHBQRV5I86ddW90JMfRlJ3RWbh
+=1Zhm
 -----END PGP SIGNATURE-----
