@@ -2,14 +2,15 @@
 Hash: SHA256
 
 DIST libdvdread-4.2.0.tar.bz2 97469 SHA256 0bea15da842a4b04a482b009d72dcc6d9c9524ccc1bf67e5748319ec5ada8097 SHA512 192802a05f4b6561bd3d85ea54a29861d98ec947a5eeaa45a8d53389744c31570ee5dbdf3fbd0645ea8e6b254795e39d0948d54849dad99252155db00501b21f WHIRLPOOL cc693a27d268bfd5bc8376c3d8990439782d943d6bb20d1b49acda442ffc79de88edface937aa69de20785686cb30c5464771c5e642f8e4286e027e25bb74e5c
+EBUILD libdvdread-4.2.0-r1.ebuild 1351 SHA256 1d6e13ac2984784398ca9ffee76f3892aaf72949c49b623176fa3db3a23ec721 SHA512 a6f49ee8bb6b7ae9b12e99d590ab7475d7e9ccedc15a249d250cfa1c4e15a4977895c2da0179ef405f5b753f00bf765fe5eb8dce947e73c0e1f6acf71c18d81f WHIRLPOOL dc74b7475d584dedb265744d46d1b3d470f3b4ad3b45129d755d8a61c92492bce49776c79564abccef39afb19f16f110f1b272b5391e8ba0e57046aac6102779
 EBUILD libdvdread-4.2.0.ebuild 933 SHA256 54a83682e77c8a6ae3180b5a68dcddc60b760ed2f70cdb3c9bee59939f7b4b0f SHA512 ba1e3e9d207e97d2a8d71d43419aa4a906df5169d59ad03be6407d17370fb840f0eb14f83becce63a7b60fe97bd749073e682864a67bb511e88bc498c1e18024 WHIRLPOOL 843e9942daa416c56e22639281e57b7495626c18cf51fdb5eea2494dede8a330a70c2504690f5ab1eca5e6b3ec2a170873c5da108ba5f486c847f451057ce857
-EBUILD libdvdread-9999.ebuild 719 SHA256 2f494eef8b2843caab1d11f13d88b035739503b384dcbade3bef8f81498d9e72 SHA512 3f60e786e77ee381112610f14de2525b30e4f803c2446cccb650800e3000c04d301dfccc6419ed304a707a5a1bccaa1f62aee9c074588d8f14fb393921b9334e WHIRLPOOL f4bd16894d6367c39375f3610878688ae994fe27f95d6e124669babf27d22fedcc1dc78f5863caa4fd7500963a3f4d6932ed660a623f7d9c09fdabbfd1de4649
-MISC ChangeLog 11151 SHA256 76396fd2f1db3c1df65d0183b09010b1e4254119e7e6ef8502e1c3388e32b1d4 SHA512 9db8e66495fdd2d507f3b67529f5febfd668411295497e5e920a92d1052282b718135e4d93b7d7a3c9e1c356451c4c5f98245a94ff1b138b075f131dc60b75c1 WHIRLPOOL dfb5b3b964de5b52d63b82170714c3892aa6691becf31178855afd3813366f6997c413405ab1a8d12c11b1275ab7e317258267c364985fa1deb3e936da5a03eb
+EBUILD libdvdread-9999.ebuild 1347 SHA256 9e047ffb728568d662f3f53bfdd0654feedbe51ddfd3ea5d6a59ad37d8abc4fc SHA512 b0703378fdd7caf36a493b77c0469502153aa218c8e3ae8368e876a405a11207c6e6dd89d119ef20f313da39a3b70b54f0bdfe34a402b62fa2824162302467e2 WHIRLPOOL 303dfd431d03aa2c1b834b5c7090c1219cd426007acad9bb716543e2504bee72fc86d0de1cd37b638238eab7169ece353c74d5b645ce8e7711c9f2a63dc23cc2
+MISC ChangeLog 11372 SHA256 57a174b83584995bc7461af2da7d084763403b85fb349bd29ea42f8141bb9ba4 SHA512 75c2561ae14649d36394831652db14d505b8c54f084f5876c21c97248d94ec477f51e7c0ef09c4f147d74f0eae5d8f0982535d635e01779015281f6fd58c7293 WHIRLPOOL 3ab38b0a8eb28217b12bff62059035b70be63619979be0228dae0539e50ae89f283bdba52f230ae7fd9266d733151c7cfdb73694aeafc8b18d1ed8909fc12a70
 MISC metadata.xml 225 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5 SHA512 79bf53ca11044e2cbddf8ba8c661abd2a6f7602748ef4dc1d1a3447d4f0e5a15a4d69f6e1f60e0f854465097019607a6fe7157906bc41ddfe41fb747de3ca7d6 WHIRLPOOL d257430e16390fc27365e2f58796f0f0b7c2c818f1bae76bb2a13b7971e5d33baa9d8aa33a12605653d05e0c7bd52b020aa96b737c56ac1038c32897c481a12c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlARo+kACgkQX3X2B8XHTomGKwCePbghTFLhMMbm/3O4y1PR3l+B
-xNcAnRkKa/4T08yI9Y1EbfDTh0qCWEwX
-=+0/V
+iEYEAREIAAYFAlH3tgcACgkQvFcC4BYPU0pGWwCeI4KOeVBMzv1sBZv/XyVUofY1
+5/YAoMiQsRO1RtRYeCT7SS8cN+NNb3Eh
+=k7sy
 -----END PGP SIGNATURE-----
