@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdnav/libdvdnav-9999.ebuild,v 1.8 2013/07/30 12:48:13 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdread/libdvdread-4.2.0-r1.ebuild,v 1.1 2013/07/30 12:48:06 aballier Exp $
 
 EAPI=5
 
@@ -11,8 +11,8 @@ SCM=""
 
 if [ "${PV#9999}" != "${PV}" ] ; then
 	SCM="subversion"
-	ESVN_REPO_URI="svn://svn.mplayerhq.hu/dvdnav/trunk/libdvdnav"
-	ESVN_PROJECT="libdvdnav"
+	ESVN_REPO_URI="svn://svn.mplayerhq.hu/dvdnav/trunk/libdvdread"
+	ESVN_PROJECT="libdvdread"
 	SRC_URI=""
 else
 	SRC_URI="http://dvdnav.mplayerhq.hu/releases/${P}.tar.bz2"
@@ -25,21 +25,21 @@ HOMEPAGE="http://dvdnav.mplayerhq.hu/"
 
 LICENSE="GPL-2"
 SLOT="0"
+
 if [ "${PV#9999}" = "${PV}" ] ; then
 	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris"
 else
 	KEYWORDS=""
 fi
-IUSE=""
-RDEPEND=">=media-libs/libdvdread-4.2[${MULTILIB_USEDEP}]
+IUSE="+css"
+
+RDEPEND="!<media-libs/libdvdnav-4.2.0
+	css? ( media-libs/libdvdcss[${MULTILIB_USEDEP}] )
 	abi_x86_32? ( !<=app-emulation/emul-linux-x86-medialibs-20130224-r4
 		!app-emulation/emul-linux-x86-medialibs[-abi_x86_32(-)] )"
-DEPEND="${RDEPEND}
-	virtual/pkgconfig" # To get pkg.m4 for eautoreconf #414391
+DEPEND="${RDEPEND}"
 
-DOCS=( AUTHORS ChangeLog DEVELOPMENT-POLICY.txt doc/dvd_structures NEWS README TODO )
-
-PATCHES=( "${FILESDIR}"/${PN}-4.2.0-pkgconfig.patch )
+DOCS=( AUTHORS ChangeLog DEVELOPMENT-POLICY.txt NEWS TODO README )
 
 src_prepare() {
 	[ "${PV#9999}" != "${PV}" ] && subversion_src_prepare
