@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libdvdnav
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdnav/ChangeLog,v 1.70 2012/05/17 14:37:58 aballier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdvdnav/ChangeLog,v 1.71 2013/07/30 12:48:13 aballier Exp $
+
+*libdvdnav-4.2.0-r1 (30 Jul 2013)
+
+  30 Jul 2013; Alexis Ballier <aballier@gentoo.org> +libdvdnav-4.2.0-r1.ebuild,
+  libdvdnav-9999.ebuild:
+  Migrate to multilib, modernize -9999 ebuild and slat it for medialibs-r5.
 
   17 May 2012; Alexis Ballier <aballier@gentoo.org> libdvdnav-4.2.0.ebuild:
   keyword ~amd64-fbsd
